# babel

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.specify/memory/: constitution.md
backend/: .dockerignore  Dockerfile  dump_db.py  import_csv.py  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routers/: archived.py  books.py  borrowed.py  data.py  ocr.py
backend/app/services/: cover_service.py  ocr_service.py
docs/: index.html
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: app.css  hooks.server.ts
frontend/src/lib/: api.ts  toast.ts  types.ts
frontend/src/lib/components/: BookCard.svelte  BookForm.svelte  BookList.svelte  BorrowDialog.svelte  ImageUpload.svelte  SearchBar.svelte  Toast.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/archived/: +page.svelte
frontend/src/routes/books/: +page.svelte
frontend/src/routes/books/[id]/: +page.svelte
frontend/src/routes/books/new/: +page.svelte
frontend/src/routes/borrowed/: +page.svelte
frontend/src/routes/data/: +page.svelte
frontend/src/routes/scan/: +page.svelte
frontend/src/routes/stats/: +page.svelte
scripts/: start_babel.command  start_babel.sh
src/: babel_viz.py  library.py
