[project]
name = "babel-backend"
version = "0.1.0"
description = "Babel Library Catalogue - Backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.24",
    "sqlalchemy>=2.0.49",
    "typer>=0.15.0",
    "uvicorn[standard]>=0.44.0",
]
